[package]
name = "gobblers"
version = "0.1.0"
authors = ["ward"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
futures = "0.3.1"
sanitize-filename = "0.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }