[package]
name = "gobblers"
version = "0.1.0"
authors = ["ward"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.5"
actix-web = "4"
futures = "0.3"
sanitize-filename = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }